--- a/RxSwift-Login-Validation/Base.lproj/Main.storyboard
+++ b/RxSwift-Login-Validation/Base.lproj/Main.storyboard
@@ -48,16 +48,24 @@
                                 <color key="textColor" red="1" green="0.16314023990000001" blue="0.13659687910000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="*For demo purposes, username, password needs at least 3 characters" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="2ar-Yw-2gk">
+                                <rect key="frame" x="18" y="272" width="339" height="12"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="10"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
                             <constraint firstItem="8FE-Tt-ins" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" id="00i-Md-PsF"/>
                             <constraint firstItem="IEb-l9-dM8" firstAttribute="trailing" secondItem="8bC-Xf-vdC" secondAttribute="trailingMargin" id="3V0-jU-OaT"/>
+                            <constraint firstItem="2ar-Yw-2gk" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="6fP-lb-NOf"/>
                             <constraint firstItem="1W2-86-ZmK" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" id="Bzl-7s-KWU"/>
                             <constraint firstItem="IEb-l9-dM8" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" id="DPa-0s-x4A"/>
                             <constraint firstItem="JzF-KQ-nJ5" firstAttribute="top" secondItem="1W2-86-ZmK" secondAttribute="bottom" constant="10" id="MIc-iZ-1Wq"/>
                             <constraint firstItem="1W2-86-ZmK" firstAttribute="trailing" secondItem="8bC-Xf-vdC" secondAttribute="trailingMargin" id="QhR-2J-vse"/>
                             <constraint firstItem="8FE-Tt-ins" firstAttribute="top" secondItem="IEb-l9-dM8" secondAttribute="bottom" constant="10" id="VG3-RR-egm"/>
+                            <constraint firstItem="2ar-Yw-2gk" firstAttribute="top" secondItem="JzF-KQ-nJ5" secondAttribute="bottom" constant="30" id="YLx-G7-cHu"/>
                             <constraint firstItem="JzF-KQ-nJ5" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" id="bfR-ZM-7i4"/>
                             <constraint firstItem="1W2-86-ZmK" firstAttribute="top" secondItem="8FE-Tt-ins" secondAttribute="bottom" constant="10" id="ea4-ga-Zkr"/>
                             <constraint firstItem="IEb-l9-dM8" firstAttribute="bottom" secondItem="wfy-db-euE" secondAttribute="top" multiplier="1:5" id="hnZ-1F-kQM"/>
